--- a/Leader/View/SignUp.storyboard
+++ b/Leader/View/SignUp.storyboard
@@ -17,11 +17,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="adC-Lm-2qF">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="611"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="591"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="yMV-Cq-mVh">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="611"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="591"/>
                                 </imageView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AWX-fo-LVY">
                                     <rect key="frame" x="60" y="383" width="255" height="45"/>
@@ -186,10 +186,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="I9J-6n-Oxt">
-                                <rect key="frame" x="108" y="204" width="158" height="77"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="I9J-6n-Oxt">
+                                <rect key="frame" x="108" y="200" width="159" height="75"/>
                                 <color key="backgroundColor" red="1" green="0.86666666670000003" blue="0.01176470588" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="h34-Jk-T0G"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Member Sign Up">
                                     <color key="titleColor" red="0.039215686270000001" green="0.039215686270000001" blue="0.039215686270000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -198,10 +200,12 @@
                                     <segue destination="DNM-hd-GMm" kind="show" id="i5v-Ad-ahe"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="YFp-po-87n">
-                                <rect key="frame" x="108" y="378" width="158" height="77"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="YFp-po-87n">
+                                <rect key="frame" x="108" y="375" width="159" height="75"/>
                                 <color key="backgroundColor" red="1" green="0.86666666670000003" blue="0.01176470588" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="Q7f-jg-odt"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Chapter Sign Up">
                                     <color key="titleColor" red="0.039215686270000001" green="0.039215686270000001" blue="0.039215686270000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -212,6 +216,14 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.019607843140000001" green="0.2470588235" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="YFp-po-87n" firstAttribute="leading" secondItem="T43-Kc-FWo" secondAttribute="leading" constant="108" id="JPK-EL-54w"/>
+                            <constraint firstItem="T43-Kc-FWo" firstAttribute="trailing" secondItem="YFp-po-87n" secondAttribute="trailing" constant="108" id="Ob2-FT-xsH"/>
+                            <constraint firstItem="I9J-6n-Oxt" firstAttribute="leading" secondItem="T43-Kc-FWo" secondAttribute="leading" constant="108" id="X1a-dt-s2f"/>
+                            <constraint firstItem="T43-Kc-FWo" firstAttribute="trailing" secondItem="I9J-6n-Oxt" secondAttribute="trailing" constant="108" id="b5W-7l-0qU"/>
+                            <constraint firstItem="I9J-6n-Oxt" firstAttribute="top" secondItem="T43-Kc-FWo" secondAttribute="top" constant="200" id="bBD-B4-XDc"/>
+                            <constraint firstItem="YFp-po-87n" firstAttribute="top" secondItem="I9J-6n-Oxt" secondAttribute="bottom" constant="100" id="kqH-cc-KUb"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="T43-Kc-FWo"/>
                     </view>
                     <navigationItem key="navigationItem" id="HH0-fX-c9T"/>
@@ -229,7 +241,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="FdZ-zm-she">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="546"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="526"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Chapter Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ds2-Dw-QgM">
@@ -265,7 +277,7 @@
                                     </connections>
                                 </textField>
                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Chapter Description" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="xn5-Wi-Ttx">
-                                    <rect key="frame" x="50" y="301" width="275" height="72"/>
+                                    <rect key="frame" x="50" y="301" width="275" height="52"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -274,7 +286,7 @@
                                     </connections>
                                 </textView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RxH-mF-lTy">
-                                    <rect key="frame" x="50" y="403" width="30" height="30"/>
+                                    <rect key="frame" x="50" y="383" width="30" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="30" id="1lP-1R-IhY"/>
                                         <constraint firstAttribute="height" constant="30" id="HyZ-Fg-Pxl"/>
@@ -286,7 +298,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9MX-Uh-P5H">
-                                    <rect key="frame" x="80" y="461" width="215" height="35"/>
+                                    <rect key="frame" x="80" y="441" width="215" height="35"/>
                                     <color key="backgroundColor" red="0.97785097359999995" green="0.86324322220000005" blue="0.29076632860000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="35" id="3Ut-d7-Vf6"/>
@@ -301,7 +313,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WPx-vL-eb2">
-                                    <rect key="frame" x="90" y="403" width="280" height="33"/>
+                                    <rect key="frame" x="90" y="383" width="280" height="33"/>
                                     <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                     <state key="normal" title="I agree to Leader's Terms of Use">
                                         <color key="titleColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -370,7 +382,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="JL6-6o-kbi">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="547"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="527"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Position" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BR0-sB-1gm">
@@ -546,7 +558,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="8fX-sy-ERy">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="549"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="529"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Full Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Adl-19-thr">
